refactor: AwsS3Service SDK 예외 처리 및 코드 개선 (#326)